--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="st-hero-text">
           <h3>Hello, I’m</h3>
-          <h1>Edward <br>Davis
+          <h1>Azizur <br>Rahaman
           </h1>
           <h2>Visual Designer</h2>
           <div class="st-hero-btn">
@@ -123,7 +123,7 @@
           <div class="st-vertical-middle">
             <div class="st-vertical-middle-in">
               <div class="st-text-block st-style1">
-                <h2 class="st-text-block-title">Hi There! I'm Edward Davis</h2>
+                <h2 class="st-text-block-title">Hi There! I'm Azizur Rahman</h2>
                 <h4 class="st-text-block-subtitle">Visual Designer</h4>
                 <div class="st-text-block-text">
                   <p>I am a Visual Designer with a strong focus on digital branding. Visul design seeks to attract,
@@ -131,11 +131,11 @@
                     favorable impact.</p>
                 </div>
                 <ul class="st-text-block-details st-mp0">
-                  <li><span>Birthday</span> : <span>May 07, 1990</span></li>
-                  <li><span>Phone</span> : <span>+1 876-369-9009</span></li>
-                  <li><span>Email</span> : <span>devis@example.com</span></li>
-                  <li><span>From</span> : <span>2661 Hich meadow lane bear creek</span></li>
-                  <li><span>Language</span> : <span>English, Germanic</span></li>
+                  <li><span>Birthday</span> : <span>May 14, 2001</span></li>
+                  <li><span>Phone</span> : <span>01521215947</span></li>
+                  <li><span>Email</span> : <span>azizurrahmanhasib090@gmail.com</span></li>
+                  <li><span>From</span> : <span>Narayanganj,Dhaka,Bangladesh</span></li>
+                  <li><span>Language</span> : <span>English, Arabic</span></li>
                   <li><span>Freelance</span> : <span>Available</span></li>
                 </ul>
                 <div class="st-text-block-btn">
